[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/meteorBig.png" type="Texture" id=1]
[ext_resource path="res://Meteor/Meteor.gd" type="Script" id=2]

[node name="Meteor" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 14, -55, 60, -17, 67, 32, 16, 55, -21, 27, -54, 27, -67, -6, -43, -41 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 0.500006 )
scale = Vector2( 6.85, 5.75 )

[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Meteor_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
